<resources>
    <string name="app_name">TabbedActivity</string>

    <string name="title_section1">Apply</string>
    <string name="title_section2">Manage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="AvailableLeaves">Available Leaves</string>
    <string name="EarnedLeaves">Earned Leaves</string>
    <string name="TypeOfLeave">Type of Leave</string>
    <string name="StartDate">Start Date</string>
    <string name="EndDate">End Date</string>
    <string name="halfdayleave">Half Day Leave</string>
    <string name="reasonforleave">Reason for Leave</string>
    <string name="approveremail">Approver Email</string>
    <string name="apply">Apply</string>
    <string name="leavestatus">Leave Status</string>
    <string name="sendRemainder">send Remainder</string>
    <string name="cancel">Cancel</string>
    <string-array name="LeaveType">
        <item>Earned Leave</item>
        <item>Comp Off</item>
        <item>Loss of Pay</item>
    </string-array>
    <string-array name="NoOfDays">
        <item>Last 30 Days</item>
        <item>Last 60 Days</item>
    </string-array>
</resources>

