<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/InfoLayout"
        tools:context=".MainActivity$PlaceholderFragment">

        <!--<TextView android:id="@+id/section_label" android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/EarnedLeaves"
            android:text="@string/EarnedLeaves" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="04"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NoOfLeaves"
            android:text="@string/AvailableLeaves" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TotalLeaves"
            android:text="08"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LeaveStatusBar"
        android:layout_below="@id/InfoLayout"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/leavestatus"
            android:text="@string/leavestatus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AvailableLeaves"
            android:text="04"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/spinner"
            android:layout_weight="1"
            android:background="@android:drawable/btn_dropdown"
            android:prompt="@string/EarnedLeaves"
            android:entries="@array/NoOfDays"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/status"
        android:layout_below="@id/LeaveStatusBar"
        android:background="@drawable/border"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/LeaveStatusInfo">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_lock_silent_mode"
                android:id="@+id/statusIcon"
                android:layout_alignBottom="@+id/textView"
                android:layout_alignTop="@+id/date" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="19 Oct 2015"
                android:id="@+id/date"
                android:layout_alignBaseline="@+id/sendRemainder"
                android:layout_alignBottom="@+id/sendRemainder"
                android:layout_toStartOf="@+id/sendRemainder"
                android:layout_marginEnd="45dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ZakeerHussain"
                android:layoutDirection="inherit"
                android:layout_below="@+id/sendRemainder"
                android:layout_alignStart="@+id/date"
                android:id="@+id/textView" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sendRemainder"
                android:text="@string/sendRemainder"
                android:layout_alignParentEnd="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Cancel"
                android:text="@string/cancel"
                android:layout_below="@id/sendRemainder"
                android:layout_alignParentEnd="true"
                android:layout_alignStart="@+id/sendRemainder" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
